src/test/deca/syntax/invalid/synt/string.deca
"sal\ut"
// @expected_output deca:1:0: token recognition error
